Добовляет адаптивные декоративные элементы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,16 +10,16 @@
 
 <body class="page__body">
   <h1 class="visually-hidden">Cat Energy</h1>
-  <header class="main-header">
-    <div class="main-header__logo">
-      <a class="main__logo">
-        <img class="main-header__img" width="33" height="37" src="img/logo-mobile.svg" alt="Маскот.">
+  <header class="header">
+    <div class="header__logo">
+      <a class="header-link__logo" href="index.html">
+        <img class="header-link__img" width="33" height="37" src="img/logo-mobile.svg" alt="Маскот.">
       </a>
-      <a class="main__logo">
+      <a class="header-link__logo">
         <img src="img/logo-cat-energy.svg" width="101" height="18" alt="Логотип.">
       </a>
     </div>
-    <nav class="main-nav">
+    <nav class="main-nav main-nav--opened main-nav--nojs">
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -44,11 +44,13 @@
         <h2 class="product__title">Каталог продукции</h2>
         <div class="product-card">
           <div class="product-card__wrapper">
-            <b class="product-card__subtitle">Cat Energy PRO 500&nbsp;г</b>
+            <a class="product-card__link" href="">
+              <h3 class="product-card__subtitle">Cat Energy PRO 500&nbsp;г</h3>
+            </a>
             <ul class="product-card__list">
               <li class="product-card__item">
                 <span class="product-card__info">Масса</span>
-                <span class="product-card__info">500г</span>
+                <span class="product-card__info">500 г</span>
               </li>
               <li class="product-card__item">
                 <span class="product-card__info">Вкус</span>
@@ -59,14 +61,16 @@
                 <span class="product-card__info">700 Р.</span>
               </li>
             </ul>
-            <button class="product-card__butten" type="button">Заказать</button>
+            <button class="product-card__butten butten" type="button">Заказать</button>
           </div>
           <div class="product-card__wrapper">
-            <b class="product-card__subtitle">Cat Energy PRO 1000&nbsp;г</b>
+            <a class="product-card__link" href="">
+              <h3 class="product-card__subtitle">Cat Energy PRO 1000&nbsp;г</h3>
+            </a>
             <ul class="product-card__list">
               <li class="product-card__item">
                 <span class="product-card__info">Масса</span>
-                <span class="product-card__info">1000г</span>
+                <span class="product-card__info">1000 г</span>
               </li>
               <li class="product-card__item">
                 <span class="product-card__info">Вкус</span>
@@ -77,14 +81,16 @@
                 <span class="product-card__info">1000 Р.</span>
               </li>
             </ul>
-            <button class="product-card__butten" type="button">Заказать</button>
+            <button class="product-card__butten butten" type="button">Заказать</button>
           </div>
           <div class="product-card__wrapper">
-            <b class="product-card__subtitle">Cat Energy PRO 500&nbsp;г</b>
+            <a class="product-card__link" href="">
+              <h3 class="product-card__subtitle">Cat Energy PRO 500&nbsp;г</h3>
+            </a>
             <ul class="product-card__list">
               <li class="product-card__item">
                 <span class="product-card__info">Масса</span>
-                <span class="product-card__info">500г</span>
+                <span class="product-card__info">500 г</span>
               </li>
               <li class="product-card__item">
                 <span class="product-card__info">Вкус</span>
@@ -95,14 +101,16 @@
                 <span class="product-card__info">700 Р.</span>
               </li>
             </ul>
-            <button class="product-card__butten" type="button">Заказать</button>
+            <button class="product-card__butten butten" type="button">Заказать</button>
           </div>
           <div class="product-card__wrapper">
-            <b class="product-card__subtitle">Cat Energy PRO 1000&nbsp;г</b>
+            <a class="product-card__link" href="">
+              <h3 class="product-card__subtitle">Cat Energy PRO 1000&nbsp;г</h3>
+            </a>
             <ul class="product-card__list">
               <li class="product-card__item">
                 <span class="product-card__info">Масса</span>
-                <span class="product-card__info">1000г</span>
+                <span class="product-card__info">1000 г</span>
               </li>
               <li class="product-card__item">
                 <span class="product-card__info">Вкус</span>
@@ -113,14 +121,16 @@
                 <span class="product-card__info">1000 Р.</span>
               </li>
             </ul>
-            <button class="product-card__butten" type="button">Заказать</button>
+            <button class="product-card__butten butten" type="button">Заказать</button>
           </div>
           <div class="product-card__wrapper">
-            <b class="product-card__subtitle">Cat Energy slim 500&nbsp;г</b>
+            <a class="product-card__link" href="">
+              <h3 class="product-card__subtitle">Cat Energy slim 500&nbsp;г</h3>
+            </a>
             <ul class="product-card__list">
               <li class="product-card__item">
                 <span class="product-card__info">Масса</span>
-                <span class="product-card__info">500г</span>
+                <span class="product-card__info">500 г</span>
               </li>
               <li class="product-card__item">
                 <span class="product-card__info">Вкус</span>
@@ -131,14 +141,16 @@
                 <span class="product-card__info">400 Р.</span>
               </li>
             </ul>
-            <button class="product-card__butten" type="button">Заказать</button>
+            <button class="product-card__butten butten" type="button">Заказать</button>
           </div>
           <div class="product-card__wrapper">
-            <b class="product-card__subtitle">Cat Energy slim 1000&nbsp;г</b>
+            <a class="product-card__link" href="">
+              <h3 class="product-card__subtitle">Cat Energy slim 1000&nbsp;г</h3>
+            </a>
             <ul class="product-card__list">
               <li class="product-card__item">
                 <span class="product-card__info">Масса</span>
-                <span class="product-card__info">1000г</span>
+                <span class="product-card__info">1000 г</span>
               </li>
               <li class="product-card__item">
                 <span class="product-card__info">Вкус</span>
@@ -149,14 +161,16 @@
                 <span class="product-card__info">700 Р.</span>
               </li>
             </ul>
-            <button class="product-card__butten" type="button">Заказать</button>
+            <button class="product-card__butten butten" type="button">Заказать</button>
           </div>
           <div class="product-card__wrapper">
-            <b class="product-card__subtitle">Cat Energy slim 500&nbsp;г</b>
+            <a class="product-card__link" href="">
+              <h3 class="product-card__subtitle">Cat Energy slim 500&nbsp;г</h3>
+            </a>
             <ul class="product-card__list">
               <li class="product-card__item">
                 <span class="product-card__info">Масса</span>
-                <span class="product-card__info">500г</span>
+                <span class="product-card__info">500 г</span>
               </li>
               <li class="product-card__item">
                 <span class="product-card__info">Вкус</span>
@@ -167,57 +181,81 @@
                 <span class="product-card__info">500 Р.</span>
               </li>
             </ul>
-            <button class="product-card__butten" type="button">Заказать</button>
+            <button class="product-card__butten butten" type="button">Заказать</button>
           </div>
-          <div class="product-card__wrapper">
+          <div class="product-card__wrapper-more">
+            <button class="product-card__butten-all" type="button"></button>
             <h3 class="product-card__title">Показать еще 100500 товаров</h3>
             <p class="product-card__text">На&nbsp;самом деле вкусов гораздо больше!</p>
-            <button class="product-card__butten product-card__butten--col" type="button">показать все</button>
-          </div>
-        </div>
-      </section>
-      <section class="additionally">
-        <h2 class="additionally__title">Дополнительные товары</h2>
-        <div class="additionally__wrapper">
-          <ul class="additionally__list">
-            <li class="additionally__product">
-              <b class="additionally__subtitle">Сахарозаменитель</b>
-              <span class="additionally__item">1 упаковка (100 г)</span>
-              <span class="additionally__price">200Р</span>
-              <button class="additionally__butten" type="button">Заказать</button>
-            </li>
-            <li class="additionally__product">
-              <b class="additionally__subtitle">питьевая вода</b>
-              <span class="additionally__item">5 литров</span>
-              <span class="additionally__price">50Р</span>
-              <button class="additionally__butten" type="button">Заказать</button>
-            </li>
-            <li class="additionally__product">
-              <b class="additionally__subtitle">молоко</b>
-              <span class="additionally__item">1 литр</span>
-              <span class="additionally__price">100Р</span>
-              <button class="additionally__butten" type="button">Заказать</button>
-            </li>
-            <li class="additionally__product">
-              <b class="additionally__subtitle">витамины</b>
-              <span class="additionally__item">1 упаковка (30 г)</span>
-              <span class="additionally__price">300Р</span>
-              <button class="additionally__butten" type="button">Заказать</button>
-            </li>
-          </ul>
-          <div class="additionally__gift">
-            <p class="additionally__text">Закажите все и&nbsp;получите чехол для кота в&nbsp;подарок!</p>
+            <button class="product-card__butten-more" type="button">показать все</button>
           </div>
         </div>
       </section>
     </div>
+    <section class="additionally">
+      <div class="additionally__line">
+        <div class="additionally__line-title">
+          <h2 class="additionally__title">Дополнительные товары</h2>
+        </div>
+      </div>
+      <div class="additionally__wrapper">
+        <ul class="additionally__list">
+          <li class="additionally__product">
+            <div class="additionally__inner">
+              <h3 class="additionally__subtitle">Сахарозаменитель</h3>
+              <div class="additionally__flex">
+                <span class="additionally__item">1 упаковка (100 г)</span>
+                <span class="additionally__price">200 Р</span>
+              </div>
+            </div>
+            <button class="additionally__butten butten" type="button">Заказать</button>
+          </li>
+          <li class="additionally__product">
+            <div class="additionally__inner">
+              <h3 class="additionally__subtitle">питьевая вода</h3>
+              <div class="additionally__flex">
+                <span class="additionally__item">5 литров</span>
+                <span class="additionally__price">50 Р</span>
+              </div>
+            </div>
+            <button class="additionally__butten butten" type="button">Заказать</button>
+          </li>
+          <li class="additionally__product">
+            <div class="additionally__inner">
+              <h3 class="additionally__subtitle">молоко</h3>
+              <div class="additionally__flex">
+                <span class="additionally__item">1 литр</span>
+                <span class="additionally__price">100 Р</span>
+              </div>
+            </div>
+            <button class="additionally__butten butten" type="button">Заказать</button>
+          </li>
+          <li class="additionally__product">
+            <div class="additionally__inner">
+              <h3 class="additionally__subtitle">витамины</h3>
+              <div class="additionally__flex">
+                <span class="additionally__item">1 упаковка (30 г)</span>
+                <span class="additionally__price">300 Р</span>
+              </div>
+            </div>
+            <button class="additionally__butten butten" type="button">Заказать</button>
+          </li>
+        </ul>
+        <div class="additionally__info">
+          <span class="additionally__gift"></span>
+          <span class="visually-hidden">Подарок</span>
+          <p class="additionally__text">Закажите все и&nbsp;получите чехол для кота в&nbsp;подарок!</p>
+        </div>
+      </div>
+    </section>
+
     <section class="location">
       <h2 class="visually-hidden">Местоположение</h2>
-      <div class="location__inner">
+      <div class="location__inner location__inner--mod">
         <p class="location__text">приглашаем к&nbsp;сотрудничеству дилеров!</p>
         <a class="location__link" href="#">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</a>
       </div>
-      <iframe
+      <iframe class="location__iframe"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3997.3973863279616!2d30.324935674167147!3d59.93714175906648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1649771068060!5m2!1sru!2sru"
         width="320" height="450" style="border: 0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -225,7 +263,7 @@
   </main>
   <footer class="main-footer">
     <div class="main-footer__wrapper">
-      <a class="main__logo">
+      <a class="main__logo-footer">
         <img src="img/logo-cat-energy.svg" width="101" height="18" alt="Логотип.">
       </a>
       <div class="main-footer__social social">
@@ -270,4 +308,5 @@
       </div>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
