--- a/source/form.html
+++ b/source/form.html
@@ -226,143 +226,153 @@
       </div>
       <form class="form__content" action="https://echo.htmlacademy.ru" method="post">
         <div class="form__inner">
-          <ul class="form__list">
-            <li class="form__item">
-              <label class="form__label" for="name">Имя*</label>
-              <input class="form__fild" type="text" id="name" name="nickname" placeholder="Барсик">
-            </li>
-            <li class="form__item">
-              <label class="form__label" for="weight">Вес (кг):*</label>
-              <input class="form__fild" type="number" id="weight" name="weight" placeholder="7">
-            </li>
-            <li class="form__item">
-              <label class="form__label" for="age">Возраст (лет):</label>
-              <input class="form__fild" type="number" id="age" name="age" placeholder="7">
-            </li>
-          </ul>
-          <ul class="form__list form__list--radio">
-            <li class="form__radio">
-              <label class="form__label-button">
-                <input class="form__input visually-hidden" type="radio" name="program-type" value="weight"
-                  disabled="disabled" checked="checked">
-                <span class="form__radio-mark"></span>
-                <span class="form__label-item">похудение</span>
-              </label>
-            </li>
-            <li class="form__radio">
-              <label class="form__label-button">
-                <input class="form__input visually-hidden" type="radio" name="program-type" value="weight-gain">
-                <span class="form__radio-mark"></span>
-                <span class="form__label-item">Набор массы</span>
-              </label>
-            </li>
-            <li class="form__radio">
-              <label class="form__label-button">
-                <input class="form__input visually-hidden" type="radio" name="program-type" value="advice">
-                <span class="form__radio-mark"></span>
-                <span class="form__label-item">Не знаю (Нужен ваш совет)</span>
-              </label>
-            </li>
-          </ul>
+          <div class="form__cotainer">
+            <ul class="form__list">
+              <li class="form__item">
+                <label class="form__label" for="name">Имя*</label>
+                <input class="form__fild" type="text" id="name" name="nickname" placeholder="Барсик">
+              </li>
+              <li class="form__item">
+                <label class="form__label" for="weight">Вес (кг):*</label>
+                <input class="form__fild" type="number" id="weight" name="weight" placeholder="7">
+              </li>
+              <li class="form__item">
+                <label class="form__label" for="age">Возраст (лет):</label>
+                <input class="form__fild" type="number" id="age" name="age" placeholder="7">
+              </li>
+            </ul>
+          </div>
+          <div class="form__radio-wrapper">
+            <ul class="form__list form__list--radio">
+              <li class="form__radio">
+                <label class="form__label-button">
+                  <input class="form__input visually-hidden" type="radio" name="program-type" value="weight"
+                    disabled="disabled" checked="checked">
+                  <span class="form__radio-mark"></span>
+                  <span class="form__label-item">похудение</span>
+                </label>
+              </li>
+              <li class="form__radio">
+                <label class="form__label-button">
+                  <input class="form__input visually-hidden" type="radio" name="program-type" value="weight-gain">
+                  <span class="form__radio-mark"></span>
+                  <span class="form__label-item">Набор массы</span>
+                </label>
+              </li>
+              <li class="form__radio">
+                <label class="form__label-button">
+                  <input class="form__input visually-hidden" type="radio" name="program-type" value="advice">
+                  <span class="form__radio-mark"></span>
+                  <span class="form__label-item">Не знаю (Нужен ваш совет)</span>
+                </label>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="form__line">
-          <div class="form__line-title">
-            <h2 class="form__title-contact">Контактные данные (владельца кота)</h2>
+          <div class="form__line-container">
+            <div class="form__line-title">
+              <h2 class="form__title-contact">Контактные данные (владельца кота)</h2>
+            </div>
           </div>
         </div>
-        <div class="main__wrapper main__wrapper--mod">
-          <ul class="form__list form__list--email">
-            <li class="form__item-mobile form__item-mobile--mod">
-              <label class="form__label" for="user-email">E-mail:*</label>
-              <input class="form__fild form__field--email" placeholder="kuklachev@gmail.com" type="email"
-                name="contact-email" id="user-email">
-              <svg class="form__item-svg form__item-svg--mod" width="19" height="14" viewBox="0 0 19 14" fill="none">
-                <line x1="1.111" y1="6" x2="1.111" y2="14" stroke="#222222" stroke-width="1.3" />
-                <line x1="18.111" y1="6" x2="18.111" y2="14" stroke="#222222" stroke-width="1.3" />
-                <line x1="0.460999" y1="13.35" x2="18.461" y2="13.35" stroke="#222222" stroke-width="1.3" />
-                <line x1="0.460999" y1="1.35" x2="18.461" y2="1.35" stroke="#222222" stroke-width="1.3" />
-                <path d="M17.811 3.1821L9.46102 9.67654L1.111 3.18209V1.65H3.961L9.46102 1.65H14.461H17.811V3.1821Z"
-                  stroke="currentColor" stroke-width="1.3" />
-              </svg>
-            </li>
-            <li class="form__item-mobile form__item-mobile--mod">
-              <label class="form__label" for="user-mobile">Телефон:*</label>
-              <input class="form__fild form__field--mobile" placeholder="8 (960) 900-60-90" type="number"
-                name="contact-mobile" id="user-mobile">
-              <svg class="form__item-svg form__item-svg--fone" width="20" height="21" fill="currentColor" tabindex="1">
-                <g clip-path="url(#a)">
-                  <path
-                    d="M17.9 9.75H9.4v1.2h8.5l-2.1 2.11.9.9 3.1-3.1a.75.75 0 0 0 0-.9l-3.1-3.12-.9.9 2.1 2.01ZM8.1 19.79v-6.22a.65.65 0 0 0-.6-.6H3.1a1.23 1.23 0 0 0 1.2 1.2h2.5v5.02H3.1a1.78 1.78 0 0 1-1.9-1.71V3.43a1.78 1.78 0 0 1 1.7-1.8h3.9v5.01H4.4a1.22 1.22 0 0 0-1.2 1.2h4.4a.65.65 0 0 0 .6-.6V.92a.86.86 0 0 0-.7-.6H3.1A3 3 0 0 0 0 3.23v13.95a2.9 2.9 0 0 0 2.9 3.1h4.6a.5.5 0 0 0 .6-.5Z" />
-                </g>
-                <defs>
-                  <clipPath id="a">
-                    <path fill="#fff" transform="translate(0 .32)" d="M0 0h20v20.07H0z" />
-                  </clipPath>
-                </defs>
-              </svg>
-            </li>
-          </ul>
-        </div>
+        <ul class="form__list form__list--email">
+          <li class="form__item-mobile form__item-mobile--mod">
+            <label class="form__label" for="user-email">E-mail:*</label>
+            <input class="form__fild form__field--email" placeholder="kuklachev@gmail.com" type="email"
+              name="contact-email" id="user-email">
+            <svg class="form__item-svg form__item-svg--mod" width="19" height="14" viewBox="0 0 19 14" fill="none">
+              <line x1="1.111" y1="6" x2="1.111" y2="14" stroke="#222222" stroke-width="1.3" />
+              <line x1="18.111" y1="6" x2="18.111" y2="14" stroke="#222222" stroke-width="1.3" />
+              <line x1="0.460999" y1="13.35" x2="18.461" y2="13.35" stroke="#222222" stroke-width="1.3" />
+              <line x1="0.460999" y1="1.35" x2="18.461" y2="1.35" stroke="#222222" stroke-width="1.3" />
+              <path d="M17.811 3.1821L9.46102 9.67654L1.111 3.18209V1.65H3.961L9.46102 1.65H14.461H17.811V3.1821Z"
+                stroke="currentColor" stroke-width="1.3" />
+            </svg>
+          </li>
+          <li class="form__item-mobile form__item-mobile--mod">
+            <label class="form__label" for="user-mobile">Телефон:*</label>
+            <input class="form__fild form__field--mobile" placeholder="8 (960) 900-60-90" type="number"
+              name="contact-mobile" id="user-mobile">
+            <svg class="form__item-svg form__item-svg--fone" width="20" height="21" fill="currentColor" tabindex="1">
+              <g clip-path="url(#a)">
+                <path
+                  d="M17.9 9.75H9.4v1.2h8.5l-2.1 2.11.9.9 3.1-3.1a.75.75 0 0 0 0-.9l-3.1-3.12-.9.9 2.1 2.01ZM8.1 19.79v-6.22a.65.65 0 0 0-.6-.6H3.1a1.23 1.23 0 0 0 1.2 1.2h2.5v5.02H3.1a1.78 1.78 0 0 1-1.9-1.71V3.43a1.78 1.78 0 0 1 1.7-1.8h3.9v5.01H4.4a1.22 1.22 0 0 0-1.2 1.2h4.4a.65.65 0 0 0 .6-.6V.92a.86.86 0 0 0-.7-.6H3.1A3 3 0 0 0 0 3.23v13.95a2.9 2.9 0 0 0 2.9 3.1h4.6a.5.5 0 0 0 .6-.5Z" />
+              </g>
+              <defs>
+                <clipPath id="a">
+                  <path fill="#fff" transform="translate(0 .32)" d="M0 0h20v20.07H0z" />
+                </clipPath>
+              </defs>
+            </svg>
+          </li>
+        </ul>
         <div class="form__line-wrapper">
-          <div class="form__line-title">
-            <h3 class="form__title form__title--padding">Комментарий</h3>
+          <div class="form__line-container">
+            <div class="form__line-title">
+              <h3 class="form__title form__title--padding">Комментарий</h3>
+            </div>
           </div>
         </div>
-        <div class="main__wrapper main__wrapper--mod">
+        <div class="form__wrapper-textarea">
           <textarea class="form__field form__field--comment" name="comment" id="comment"
             rows="8">Расскажите обо всех повадках кота</textarea>
         </div>
         <div class="form__line-wrapper">
-          <div class="form__line-title">
-            <h3 class="form__title form__title--add">Дополнительно</h3>
+          <div class="form__line-container">
+            <div class="form__line-title">
+              <h3 class="form__title form__title--add">Дополнительно</h3>
+            </div>
           </div>
         </div>
-        <div class="main__wrapper main__wrapper--mod">
-          <ul class="form__list form__list--additionally">
-            <li class="form__item-checkbox">
-              <label class="form__label-button">
-                <input class="form__input visually-hidden" type="checkbox" name="product-type" disabled="disabled"
-                  checked="checked">
-                <span class="form__mark"></span>
-                <span class="form__info">сахарозаменитель</span>
-              </label>
-            </li>
-            <li class="form__item-checkbox">
-              <label class="form__label-button">
-                <input class="form__input visually-hidden" type="checkbox" name="product-type">
-                <span class="form__mark"></span>
-                <span class="form__info">питьевая вода</span>
-              </label>
-            </li>
-            <li class="form__item-checkbox">
-              <label class="form__label-button">
-                <input class="form__input visually-hidden" type="checkbox" name="product-type">
-                <span class="form__mark"></span>
-                <span class="form__info">молоко</span>
-              </label>
-            </li>
-            <li class="form__item-checkbox">
-              <label class="form__label-button">
-                <input class="form__input visually-hidden" type="checkbox" name="product-type">
-                <span class="form__mark"></span>
-                <span class="form__info">витамины</span>
-              </label>
-            </li>
-          </ul>
-          <div class="form__button">
-            <button class="form__button-submit button" type="submit">отправить заявку</button>
-            <p class="form__attention">* — Обязательные поля</p>
-          </div>
+        <ul class="form__list form__list--additionally">
+          <li class="form__item-checkbox">
+            <label class="form__label-button">
+              <input class="form__input visually-hidden" type="checkbox" name="product-type" disabled="disabled"
+                checked="checked">
+              <span class="form__mark"></span>
+              <span class="form__info">сахарозаменитель</span>
+            </label>
+          </li>
+          <li class="form__item-checkbox">
+            <label class="form__label-button">
+              <input class="form__input visually-hidden" type="checkbox" name="product-type">
+              <span class="form__mark"></span>
+              <span class="form__info">питьевая вода</span>
+            </label>
+          </li>
+          <li class="form__item-checkbox">
+            <label class="form__label-button">
+              <input class="form__input visually-hidden" type="checkbox" name="product-type">
+              <span class="form__mark"></span>
+              <span class="form__info">молоко</span>
+            </label>
+          </li>
+          <li class="form__item-checkbox">
+            <label class="form__label-button">
+              <input class="form__input visually-hidden" type="checkbox" name="product-type">
+              <span class="form__mark"></span>
+              <span class="form__info">витамины</span>
+            </label>
+          </li>
+        </ul>
+        <div class="form__button">
+          <button class="form__button-submit button" type="submit">отправить заявку</button>
+          <p class="form__attention">* — Обязательные поля</p>
         </div>
       </form>
     </section>
     <section class="location">
       <h2 class="visually-hidden">Местоположение</h2>
-      <div class="location__inner location__inner--mod">
-        <p class="location__text">приглашаем к&nbsp;сотрудничеству дилеров!</p>
-        <div>
-          <address class="location__link location__link--mod">ул. Большая Конюшенная, д. 19/8</address>
-          <address class="location__link">Санкт-Петербург</address>
+      <div class="location__wrapper">
+        <div class="location__color">
+          <div class="location__address location__address--mod">
+            <p class="location__text">приглашаем к&nbsp;сотрудничеству дилеров!</p>
+            <div>
+              <address class="location__link location__link--mod">ул. Большая Конюшенная, д. 19/8</address>
+              <address class="location__link">Санкт-Петербург</address>
+            </div>
+          </div>
         </div>
       </div>
       <iframe class="location__iframe"
